--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://tejhagargi:Tej%4012345@org.o0ej6rq.mongodb.net/?retryWrites=true&w=majority&appName=Org
+MONGO_URI=mongodb+srv://prem:prem12345@org.o0ej6rq.mongodb.net/?retryWrites=true&w=majority&appName=Org
 PORT=9000
 JWT_SECRET=your_jwt_secret_key
